Fix alignment issues with filterbar component

--- a/stylesheets/_component.filterbar.scss
+++ b/stylesheets/_component.filterbar.scss
@@ -73,6 +73,8 @@
             float: left;
             font-size: 16px;
             height: 100%;
+            line-height: 35px;
+            margin-bottom: 0;
             padding: 0;
             vertical-align: top;
             width: 95px;
@@ -124,6 +126,12 @@
 .filter-bar__list {
     line-height: 2em;
     list-style: none;
+
+    .form__control {
+        height: 32px;
+        line-height: 32px;
+        margin-bottom: $line-height-base;
+    }
 }
 
 .filter-bar__list-item {
@@ -138,7 +146,6 @@
     @include respond-min($screen-tablet) {
         display: inline-block;
         margin-bottom: $gutter-width / 2;
-        padding: 7px 14px 6px;
         vertical-align: top;
         width: auto;
     }
